# ZeroProofML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  KEY_INNOVATIONS_250908.md  MANIFEST.in  PAPER_V3_COMPLETION_SUMMARY.md  README.md  TEST_ERROR_FIXES.md  TEST_FIXES_SUMMARY.md  benchmark_results.json  compile_log.txt  complete_v2.md  concept_250908.md  debug_accumulation.py  debug_accumulation_detailed.py  debug_backward_pass.py  debug_complex_gradient.py  debug_constants.py  debug_grad_step_by_step.py  debug_tape_clearing.py  debug_tape_context.py  evaluation_log.json  examples_mat.txt  examples_output.md  library_todo_revision_250907.md  output.txt  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  paper_todo.md  paper_v2.aux  (+28 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  determinism.yml  import-smoke.yml  lint.yml  property.yml  release.yml  test-frameworks.yml  tests-ubuntu.yml  tests-windows.yml
.venv_dev/: pyvenv.cfg
.venv_smoke/: pyvenv.cfg
benchmark_results/: bench_2025-10-01T20:30:39.887080.json  bench_2025-10-01T21:06:13.466784.json  bench_2025-10-01T21:15:33.959609.json  bench_2025-10-01T21:24:07.783535.json  bench_2025-10-01T22:05:35.982317.json  bench_2025-10-01T22:28:17.600260.json  summary.txt
benchmarks/: README.md  baseline.json  run_benchmarks.py
docs/: adaptive_loss_summary.md  autodiff_mask_real.md  bridge_extended.md  bridge_summary.md  implementation_complete.md  implementation_summary.md  index.md  layers.md  optimization_guide.md  quick_reference.md  saturating_grad_summary.md  verification_report.md  wheel_mode_summary.md  zeroproof_complete.md
docs/topics/: 00_getting_started.md  01_overview.md  02_foundations.md  03_autodiff_modes.md  04_layers.md  05_training_policies.md  06_sampling_curriculum.md  07_evaluation_metrics.md  08_howto_checklists.md
examples/: __init__.py  adaptive_loss_demo.py  anti_illusion_demo.py  autodiff_demo.py  basic_usage.py  bridge_demo.py  classification_demo.py  complete_demo.py  coverage_control_demo.py  evaluator_cli.py  full_pipeline_demo.py  hybrid_gradient_demo.py  hybrid_overhead.py  l1_projection_demo.py  layers_demo.py  make_overhead_dataset.py  optimization_demo.py  pole_1d_tutorial.py  pole_detection_demo.py  policy_hybrid_minimal.py  saturating_grad_demo.py  soa_benchmark.py  softmax_demo.py  tag_loss_demo.py  test_critical_fixes.py  test_critical_fixes_complete.py  test_critical_fixes_v2.py  tr_rational_multi_example.py  wheel_mode_demo.py
examples/baselines/: __init__.py  compare_all.py  dls_solver.py  eps_ensemble_baseline.py  learnable_eps_baseline.py  mlp_baseline.py  rational_eps_baseline.py  smooth_rational_baseline.py
examples/robotics/: demo_rr_ik.py  ik6r_dataset.py  ik6r_train.py  rr_ik_dataset.py  rr_ik_quick.py  rr_ik_train.py  rrr_ik_dataset.py  rrr_ik_train.py
scripts/: aggregate_buckets.py  aggregate_ik6r_seeds.py  aggregate_parity.py  aggregate_quick_seeds.py  buckets_to_latex.py  create_final_figures.py  create_final_schematic.py  create_improved_schematic.py  create_paper_figures.py  create_paper_figures_v2.py  create_perfect_schematic.py  create_simple_schematic.py  crossing_sweep_eval.py  e3_robustness.py  eval_sign_consistency.py  eval_sign_consistency_pairs.py  evaluate_3r_sign_pairs.py  evaluate_trainer_buckets.py  generate_paper_artifacts.py  local_ci.sh  plot_ablation.py  plot_b012_bars.py  plot_e3r_bars.py  plot_parity.py  plot_rollout.py  plot_tr_schematic.py  plot_training_curves.py  pole_exact_scatter.py  rollout_near_singularity.py  run_complete_ablations.py  run_coverage_ablation.py  run_coverage_ablation_simple.py  run_paper_suite.py  update_benchmark_baseline.py  verify_results.py
test_diagnostics/: history_epoch_0.json  history_epoch_10.json  history_epoch_20.json  history_epoch_30.json  history_epoch_40.json
tests/: __init__.py  conftest.py  test_models.py  test_trainer.py
tests/e2e/: test_integration.py  test_no_nan_integrity.py
tests/integration/: __init__.py  run_all_integration_tests.py  test_pole_reconstruction.py  test_robotics_ik_singularities.py  test_synthetic_rational_regression.py
tests/property/: test_autodiff_properties.py  test_caching.py  test_ieee_bridge_roundtrip.py  test_optimization.py  test_parallel.py  test_profiling.py
tests/unit/: test_adaptive_loss.py  test_adaptive_loss_config.py  test_anti_illusion_metrics.py  test_basis_chebyshev_paths.py  test_bridge_extended.py  test_comparator.py  test_coprime_regularizer.py  test_coprime_regularizer_multi.py  test_curvature_logging.py  test_deterministic_reductions_toggle.py  test_enhanced_coverage.py  test_epoch_fisher_proxy.py  test_generator.py  test_gradient_properties.py  test_hybrid_bounded_update.py  test_hybrid_finite_switching.py  test_hybrid_gradient.py  test_hybrid_trainer_bench.py  test_hysteresis_no_chatter.py  test_identifiability_sylvester.py  test_ieee_bridge_signed_zero.py  test_interface.py  test_l1_projection.py  test_layer_contracts.py  test_layers_exports.py  test_logging_plotting.py  test_mask_real_rule.py  test_metrics.py  test_numpy_bitpack.py  test_optimizer_safety.py  test_pole_detection.py  test_policy_auto_resolution.py  test_policy_threshold_sensitivity.py  test_precision.py  test_reductions.py  test_robotics_gradcheck.py  test_saturating_grad.py  test_second_order_safeguards.py  test_seeding.py  test_serialization.py  (+14 more)
zeroproof/: __init__.py  bench.py  bench_compare.py  bench_summary.py  eval.py  optim_utils.py  optim_utils_second_order.py  overhead_cli.py  policy.py  protocols.py
zeroproof/autodiff/: __init__.py  backward.py  grad_funcs.py  grad_mode.py  gradient_tape.py  hybrid_gradient.py  saturating_ops.py  tr_node.py  tr_ops_grad.py
zeroproof/bridge/: __init__.py  ieee_tr.py  jax_bridge.py  numpy_bridge.py  precision.py  torch_bridge.py
(+59 files in other folders)
